# cmangoswotlk

./: .gitignore  CMakeLists.txt  CMakePresets.json
cmake/: options.cmake  showoptions.cmake
contrib/extractor/: CMakeLists.txt  System.cpp  dbcfile.cpp  mpq_libmpq.cpp  mpq_libmpq.h
contrib/extractor_scripts/: ExtractResources.sh  MoveMapGen.sh
contrib/mmap/src/: generator.cpp
contrib/vmap_assembler/: vmap_assembler.cpp
contrib/vmap_extractor/: make_vmaps.bat
contrib/vmap_extractor/vmapextract/: dbcfile.cpp  mpq_libmpq.cpp  mpq_libmpq04.h  vmapexport.cpp
dep/: CMakeLists.txt
dep/libmpq/libmpq/: common.c  mpq.c
dep/lualib/lua/: CMakeLists.txt
dep/src/: CMakeLists.txt
dep/vulkan/: exports.txt  vulkan-1.def
dep/vulkan/lib/: vulkan-1.exp  vulkan-1.lib
sql/: chat_llm.sql
src/: CMakeLists.txt
src/game/: CMakeLists.txt
src/game/AI/ChatLLM/: ChatLLM.cpp  ChatLLM.h  ChatLLMConfig.cpp  ChatLLMConfig.h  LlamaMgr.cpp  LlamaMgr.h
src/game/AI/ScriptDevAI/: ScriptDevAIMgr.cpp
src/game/Achievements/: AchievementMgr.cpp
src/game/AuctionHouse/: AuctionHouseHandler.cpp
src/game/BattleGround/: BattleGround.cpp  BattleGroundMgr.cpp
src/game/Chat/: Chat.cpp  Chat.h  ChatHandler.cpp  NpcCommands.cpp
src/game/DBScripts/: ScriptMgr.cpp
src/game/Entities/: CharacterHandler.cpp  Creature.cpp  Creature.h  GameObject.cpp  GameObject.h  Item.cpp  Item.h  ItemPrototype.h  MiscHandler.cpp  NPCHandler.cpp  Object.cpp  Object.h  Player.cpp  Player.h  Totem.cpp  Unit.cpp  Unit.h
src/game/Globals/: ObjectMgr.cpp  ObjectMgr.h
src/game/Grids/: GridNotifiers.h  GridNotifiersImpl.h
src/game/Groups/: Group.cpp  GroupHandler.cpp
src/game/Guilds/: Guild.cpp  Guild.h  GuildHandler.cpp
src/game/Loot/: LootMgr.cpp
src/game/LuaEngine/: ElunaTemplate.h  LuaEngine.cpp
src/game/LuaEngine/extensions/: ObjectVariables.ext
src/game/LuaEngine/hooks/: HookHelpers.h  PacketHooks.cpp
src/game/Mails/: MailHandler.cpp
src/game/Maps/: GridMap.cpp  Map.cpp  Map.h  MapManager.cpp
src/game/MotionGenerators/: MotionMaster.cpp
src/game/Movement/: MoveSpline.cpp  MoveSplineInit.cpp
src/game/Quests/: QuestHandler.cpp
src/game/Reputation/: ReputationMgr.cpp
src/game/Server/: WorldSession.cpp  WorldSession.h  WorldSocket.cpp
src/game/Spells/: Spell.cpp  SpellEffects.cpp
src/game/Trade/: TradeHandler.cpp
src/game/World/: World.cpp  World.h
src/mangosd/: CMakeLists.txt  Main.cpp  Master.cpp  mangosd.conf.dist.in
src/realmd/: CMakeLists.txt  Main.cpp
src/shared/: Obfuscator.h
src/shared/Database/: Field.h
src/shared/Log/: Log.cpp  Log.h
